--- a/portfolio.html
+++ b/portfolio.html
@@ -10,15 +10,22 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
     <title>Portfolio</title>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+  <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header -->
     <header class="header">
       <nav class="nav">
-        <a href="./index.html" class="logo-link link">WEB
-          <span class="link-studio">Studio</span></a
+        <a href="./index.html" class="logo-link link"
+          >WEB <span class="link-studio">Studio</span></a
         >
         <ul class="nav-list list">
           <li>
@@ -41,7 +48,9 @@
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="address-link link">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="address-link link"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -49,7 +58,6 @@
 
     <!-- Main content -->
     <main>
-      
       <section class="portfolio">
         <h1 class="filter-title">Filter</h1>
         <ul class="filter-list list">
