--- a/portfolio.html
+++ b/portfolio.html
@@ -23,42 +23,45 @@
   <body>
     <!-- Header -->
     <header class="header">
-      <nav class="nav">
-        <a href="./index.html" class="logo-link link"
-          >WEB <span class="link-studio">Studio</span></a
-        >
-        <ul class="nav-list list">
-          <li>
-            <a href="./index.html" class="nav-link link">Studio</a>
-          </li>
-          <li>
-            <a href="./portfolio.html" class="nav-link link">Portfolio</a>
-          </li>
-          <li>
-            <a href="" class="nav-link link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="container-header container">
+        <nav class="nav">
+          <a href="./index.html" class="logo-link link"
+            >WEB <span class="link-studio">Studio</span></a
+          >
+          <ul class="nav-list list">
+            <li>
+              <a href="./index.html" class="nav-link link">Studio</a>
+            </li>
+            <li>
+              <a href="./portfolio.html" class="nav-link link">Portfolio</a>
+            </li>
+            <li>
+              <a href="" class="nav-link link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
 
-      <address class="address">
-        <ul class="address-list list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="address-link link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="address-link link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address class="address">
+          <ul class="address-list list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="address-link link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="address-link link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <!-- Main content -->
     <main>
       <section class="portfolio">
+        <div class="container-portfolio container">
         <h1 class="filter-title">Filter</h1>
         <ul class="filter-list list">
           <li><button type="button" class="button">All</button></li>
@@ -77,9 +80,11 @@
                 height="300"
                 class="portfolio-img"
               />
+            <div class="app-box">
               <h2 class="portfolio-name">Banking App Interface Concept</h2>
-              <p class="portfolio-type">App</p></a
-            >
+              <p class="portfolio-type">App</p>
+            </div>
+            </a>
           </li>
           <li>
             <a href="" class="link"
@@ -90,8 +95,9 @@
                 height="300"
                 class="portfolio-img"
               />
+              <div class="app-box">
               <h2 class="portfolio-name">Cashless Payment</h2>
-              <p class="portfolio-type">Marketing</p></a
+              <p class="portfolio-type">Marketing</p></div></a
             >
           </li>
           <li>
@@ -103,8 +109,9 @@
                 height="300"
                 class="portfolio-img"
               />
+              <div class="app-box">
               <h2 class="portfolio-name">Meditation App</h2>
-              <p class="portfolio-type">App</p></a
+              <p class="portfolio-type">App</p></div></a
             >
           </li>
           <li>
@@ -116,8 +123,9 @@
                 height="300"
                 class="portfolio-img"
               />
+                          <div class="app-box">
               <h2 class="portfolio-name">Taxi Service</h2>
-              <p class="portfolio-type">Marketing</p></a
+              <p class="portfolio-type">Marketing</p></div></a
             >
           </li>
           <li>
@@ -129,8 +137,9 @@
                 height="300"
                 class="portfolio-img"
               />
+                          <div class="app-box">
               <h2 class="portfolio-name">Screen Illustrations</h2>
-              <p class="portfolio-type">Design</p></a
+              <p class="portfolio-type">Design</p></div></a
             >
           </li>
           <li>
@@ -142,8 +151,9 @@
                 height="300"
                 class="portfolio-img"
               />
+                          <div class="app-box">
               <h2 class="portfolio-name">Online Courses</h2>
-              <p class="portfolio-type">Marketing</p></a
+              <p class="portfolio-type">Marketing</p></div></a
             >
           </li>
           <li>
@@ -155,8 +165,9 @@
                 height="300"
                 class="portfolio-img"
               />
+                          <div class="app-box">
               <h2 class="portfolio-name">Instagram Stories Concept</h2>
-              <p class="portfolio-type">Design</p></a
+              <p class="portfolio-type">Design</p></div></a
             >
           </li>
           <li>
@@ -168,8 +179,9 @@
                 height="300"
                 class="portfolio-img"
               />
+                          <div class="app-box">
               <h2 class="portfolio-name">Organic Food</h2>
-              <p class="portfolio-type">Web Site</p></a
+              <p class="portfolio-type">Web Site</p></div></a
             >
           </li>
           <li>
@@ -181,16 +193,19 @@
                 height="300"
                 class="portfolio-img"
               />
+                          <div class="app-box">
               <h2 class="portfolio-name">Fresh Coffee</h2>
-              <p class="portfolio-type">Web Site</p></a
+              <p class="portfolio-type">Web Site</p></div></a
             >
           </li>
         </ul>
       </section>
+    </div>
     </main>
 
     <!-- Footer -->
     <footer class="footer">
+      <div class="container-footer container">
       <a href="./index.html" class="link"
         >Web<span class="link-web">Studio</span></a
       >
@@ -198,6 +213,7 @@
         Increase the flow of customers and<br />sales for your business with
         digital<br />marketing & growth solutions.
       </p>
+    </div>
     </footer>
   </body>
 </html>
