--- a/index.html
+++ b/index.html
@@ -12,61 +12,66 @@
     />
     <title>WebStudio</title>
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
-    integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
-  <link rel="stylesheet" href="./css/styles.css" />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header -->
     <header class="header">
-      <nav class="nav">
-        <a href="./index.html" class="logo-link link"
-          >WEB <span class="link-studio">Studio</span></a
-        >
-        <ul class="nav-list list">
-          <li>
-            <a href="./index.html" class="nav-link link">Studio</a>
-          </li>
-          <li>
-            <a href="./portfolio.html" class="nav-link link">Portfolio</a>
-          </li>
-          <li>
-            <a href="" class="nav-link link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="container-header container">
+        <nav class="nav">
+          <a href="./index.html" class="logo-link link"
+            >WEB <span class="link-studio">Studio</span></a
+          >
+          <ul class="nav-list list">
+            <li>
+              <a href="./index.html" class="nav-link link">Studio</a>
+            </li>
+            <li>
+              <a href="./portfolio.html" class="nav-link link">Portfolio</a>
+            </li>
+            <li>
+              <a href="" class="nav-link link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
 
-      <address class="address">
-        <ul class="address-list list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="address-link link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="address-link link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address class="address">
+          <ul class="address-list list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="address-link link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="address-link link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <!-- Main content -->
     <main>
       <!-- Hero -->
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions<br />for Your Business</h1>
-        <button type="button" class="hero-btn">Order Service</button>
+        <div class="container-hero container">
+          <h1 class="hero-title">Effective Solutions<br />for Your Business</h1>
+          <button type="button" class="hero-btn">Order Service</button>
+        </div>
       </section>
 
       <!-- Our preference -->
       <section>
-        <h2 class="preference">Our preference</h2>
+        <div class="container-pref container">
+        <h2 class="hidden-tittle">Our preference</h2>
         <ul class="pref-list list">
           <li>
             <h3 class="pref-title">Strategy</h3>
@@ -97,10 +102,12 @@
             </p>
           </li>
         </ul>
+      </div>
       </section>
 
       <!-- About us -->
       <section>
+        <div class="container-about container">
         <h2 class="about">What are we doing</h2>
         <ul class="about-list list">
           <li>
@@ -128,10 +135,12 @@
             />
           </li>
         </ul>
+      </div>
       </section>
 
       <!-- Our team -->
       <section class="our-team">
+        <div class="container-team container">
         <h2 class="team">Our Team</h2>
         <ul class="team-list list">
           <li class="team-card">
@@ -176,10 +185,12 @@
           </li>
         </ul>
       </section>
+    </div>
     </main>
 
     <!-- Footer -->
     <footer class="footer">
+      <div class="container-footer container">
       <a href="./index.html" class="link"
         >Web<span class="link-web">Studio</span></a
       >
@@ -187,6 +198,7 @@
         Increase the flow of customers and<br />sales for your business with
         digital<br />marketing & growth solutions.
       </p>
+    </div>
     </footer>
   </body>
 </html>
