--- a/index.html
+++ b/index.html
@@ -69,32 +69,32 @@
       </section>
 
       <!-- Our preference -->
-      <section>
+      <section class="pref-section">
         <div class="container-pref container">
         <h2 class="hidden-tittle">Our preference</h2>
         <ul class="pref-list list">
-          <li>
+          <li class="pref-list-item">
             <h3 class="pref-title">Strategy</h3>
             <p class="pref-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li class="pref-list-item">
             <h3 class="pref-title">Punctuality</h3>
             <p class="pref-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="pref-list-item">
             <h3 class="pref-title">Diligence</h3>
             <p class="pref-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="pref-list-item">
             <h3 class="pref-title">Technologies</h3>
             <p class="pref-text">
               Design practice focused on digital experiences. We bring forth a
@@ -106,11 +106,11 @@
       </section>
 
       <!-- About us -->
-      <section>
+      <section class="about-section">
         <div class="container-about container">
         <h2 class="about">What are we doing</h2>
         <ul class="about-list list">
-          <li>
+          <li class="about-list-item">
             <img
               src="./images/img_1.jpg"
               alt="Open project on the iMac"
@@ -118,7 +118,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="about-list-item">
             <img
               src="./images/img_2.jpg"
               alt="Open messenger in a mobile"
@@ -126,7 +126,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="about-list-item">
             <img
               src="./images/img_3.jpg"
               alt="Adapted site on a phone against the background of an open site on a laptop"
@@ -144,44 +144,52 @@
         <h2 class="team">Our Team</h2>
         <ul class="team-list list">
           <li class="team-card">
-            <img
+            <img class="team-photo"
               src="./images/team_1.jpg"
               alt="Photo of Mark Guerrero"
               width="264"
               height="260"
             />
+            <div class="team-item">
             <h3 class="team-name">Mark Guerrero</h3>
             <p class="team-position">Product Designer</p>
+          </div>
           </li>
           <li class="team-card">
-            <img
+            <img class="team-photo"
               src="./images/team_2.jpg"
               alt="Photo of Tom Ford"
               width="264"
               height="260"
             />
+            <div class="team-item">
             <h3 class="team-name">Tom Ford</h3>
             <p class="team-position">Frontend Developer</p>
+          </div>
           </li>
           <li class="team-card">
-            <img
+            <img class="team-photo"
               src="./images/team_3.jpg"
               alt="Photo of Camila Garcia"
               width="264"
               height="260"
             />
+            <div class="team-item">
             <h3 class="team-name">Camila Garcia</h3>
             <p class="team-position">Marketing</p>
+          </div>
           </li>
           <li class="team-card">
-            <img
+            <img class="team-photo"
               src="./images/team_4.jpg"
               alt="Photo of Daniel Wilson"
               width="264"
               height="260"
             />
+            <div class="team-item">
             <h3 class="team-name">Daniel Wilson</h3>
             <p class="team-position">UI Designer</p>
+          </div>
           </li>
         </ul>
       </section>
@@ -191,12 +199,12 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="container-footer container">
-      <a href="./index.html" class="link"
-        >Web<span class="link-web">Studio</span></a
+      <a href="./index.html" class="footer-link link"
+        >Web<span class="footer-link-web">Studio</span></a
       >
-      <p class="text">
-        Increase the flow of customers and<br />sales for your business with
-        digital<br />marketing & growth solutions.
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with
+        digital marketing & growth solutions.
       </p>
     </div>
     </footer>
