--- a/portfolio.html
+++ b/portfolio.html
@@ -12,13 +12,13 @@
     />
     <title>Portfolio</title>
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
-    integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
-  <link rel="stylesheet" href="./css/styles.css" />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header -->
@@ -62,158 +62,166 @@
     <main>
       <section class="portfolio">
         <div class="container-portfolio container">
-        <h1 class="filter-title">Filter</h1>
-        <ul class="filter-list list">
-          <li><button type="button" class="button">All</button></li>
-          <li><button type="button" class="button">Web Site</button></li>
-          <li><button type="button" class="button">App</button></li>
-          <li><button type="button" class="button">Design</button></li>
-          <li><button type="button" class="button">Marketing</button></li>
-        </ul>
-        <ul class="portfolio-list list">
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/portfolio_1.jpg"
-                alt="Open pages of the bank's app"
-                width="360"
-                height="300"
-                class="portfolio-img"
-              />
-            <div class="app-box">
-              <h2 class="portfolio-name">Banking App Interface Concept</h2>
-              <p class="portfolio-type">App</p>
-            </div>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link"
-              ><img
-                src="./images/portfolio_2.jpg"
-                alt="Pay by phone via QR code"
-                width="360"
-                height="300"
-                class="portfolio-img"
-              />
-              <div class="app-box">
-              <h2 class="portfolio-name">Cashless Payment</h2>
-              <p class="portfolio-type">Marketing</p></div></a
-            >
-          </li>
-          <li>
-            <a href="" class="link"
-              ><img
-                src="./images/portfolio_3.jpg"
-                alt="Open website on a computer and application on a phone"
-                width="360"
-                height="300"
-                class="portfolio-img"
-              />
-              <div class="app-box">
-              <h2 class="portfolio-name">Meditation App</h2>
-              <p class="portfolio-type">App</p></div></a
-            >
-          </li>
-          <li>
-            <a href="" class="link"
-              ><img
-                src="./images/portfolio_4.jpg"
-                alt="Driver in a car looking at maps on his phone"
-                width="360"
-                height="300"
-                class="portfolio-img"
-              />
-                          <div class="app-box">
-              <h2 class="portfolio-name">Taxi Service</h2>
-              <p class="portfolio-type">Marketing</p></div></a
-            >
-          </li>
-          <li>
-            <a href="" class="link"
-              ><img
-                src="./images/portfolio_5.jpg"
-                alt="Different types of screensaver design"
-                width="360"
-                height="300"
-                class="portfolio-img"
-              />
-                          <div class="app-box">
-              <h2 class="portfolio-name">Screen Illustrations</h2>
-              <p class="portfolio-type">Design</p></div></a
-            >
-          </li>
-          <li>
-            <a href="" class="link"
-              ><img
-                src="./images/portfolio_6.jpg"
-                alt="A girl with headphones looking at her phone"
-                width="360"
-                height="300"
-                class="portfolio-img"
-              />
-                          <div class="app-box">
-              <h2 class="portfolio-name">Online Courses</h2>
-              <p class="portfolio-type">Marketing</p></div></a
-            >
-          </li>
-          <li>
-            <a href="" class="link"
-              ><img
-                src="./images/portfolio_7.jpg"
-                alt="Different story designs for social media"
-                width="360"
-                height="300"
-                class="portfolio-img"
-              />
-                          <div class="app-box">
-              <h2 class="portfolio-name">Instagram Stories Concept</h2>
-              <p class="portfolio-type">Design</p></div></a
-            >
-          </li>
-          <li>
-            <a href="" class="link"
-              ><img
-                src="./images/portfolio_8.jpg"
-                alt="A girl with a bag of food"
-                width="360"
-                height="300"
-                class="portfolio-img"
-              />
-                          <div class="app-box">
-              <h2 class="portfolio-name">Organic Food</h2>
-              <p class="portfolio-type">Web Site</p></div></a
-            >
-          </li>
-          <li>
-            <a href="" class="link"
-              ><img
-                src="./images/portfolio_9.jpg"
-                alt="Barista makes coffee"
-                width="360"
-                height="300"
-                class="portfolio-img"
-              />
-                          <div class="app-box">
-              <h2 class="portfolio-name">Fresh Coffee</h2>
-              <p class="portfolio-type">Web Site</p></div></a
-            >
-          </li>
-        </ul>
+          <h1 class="filter-title">Filter</h1>
+          <ul class="filter-list list">
+            <li><button type="button" class="button">All</button></li>
+            <li><button type="button" class="button">Web Site</button></li>
+            <li><button type="button" class="button">App</button></li>
+            <li><button type="button" class="button">Design</button></li>
+            <li><button type="button" class="button">Marketing</button></li>
+          </ul>
+          <ul class="portfolio-list list">
+            <li class="category-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio_1.jpg"
+                  alt="Open pages of the bank's app"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="app-box">
+                  <h2 class="portfolio-name">Banking App Interface Concept</h2>
+                  <p class="portfolio-type">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="category-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio_2.jpg"
+                  alt="Pay by phone via QR code"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="app-box">
+                  <h2 class="portfolio-name">Cashless Payment</h2>
+                  <p class="portfolio-type">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="category-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio_3.jpg"
+                  alt="Open website on a computer and application on a phone"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="app-box">
+                  <h2 class="portfolio-name">Meditation App</h2>
+                  <p class="portfolio-type">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="category-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio_4.jpg"
+                  alt="Driver in a car looking at maps on his phone"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="app-box">
+                  <h2 class="portfolio-name">Taxi Service</h2>
+                  <p class="portfolio-type">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="category-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio_5.jpg"
+                  alt="Different types of screensaver design"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="app-box">
+                  <h2 class="portfolio-name">Screen Illustrations</h2>
+                  <p class="portfolio-type">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="category-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio_6.jpg"
+                  alt="A girl with headphones looking at her phone"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="app-box">
+                  <h2 class="portfolio-name">Online Courses</h2>
+                  <p class="portfolio-type">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="category-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio_7.jpg"
+                  alt="Different story designs for social media"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="app-box">
+                  <h2 class="portfolio-name">Instagram Stories Concept</h2>
+                  <p class="portfolio-type">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="category-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio_8.jpg"
+                  alt="A girl with a bag of food"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="app-box">
+                  <h2 class="portfolio-name">Organic Food</h2>
+                  <p class="portfolio-type">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li class="category-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio_9.jpg"
+                  alt="Barista makes coffee"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="app-box">
+                  <h2 class="portfolio-name">Fresh Coffee</h2>
+                  <p class="portfolio-type">Web Site</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
-    </div>
     </main>
 
     <!-- Footer -->
     <footer class="footer">
       <div class="container-footer container">
-      <a href="./index.html" class="link"
-        >Web<span class="link-web">Studio</span></a
-      >
-      <p class="text">
-        Increase the flow of customers and<br />sales for your business with
-        digital<br />marketing & growth solutions.
-      </p>
-    </div>
+        <a href="./index.html" class="footer-link link"
+          >Web<span class="footer-link-web">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
