--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <!-- Our preference -->
       <section class="pref-section">
         <div class="container-pref container">
-          <h2 class="visually-hidden">Our preference</h2>
+          <h2 class="hidden-tittle">Our preference</h2>
           <ul class="pref-list list">
             <li class="pref-list-item">
               <h3 class="pref-title">Strategy</h3>
