--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
     <main>
       <section class="portfolio">
         <div class="container-portfolio container">
-          <h1 class="visually-hidden">Filter</h1>
+          <h1 class="is-hidden">Filter</h1>
           <ul class="filter-list list">
             <li><button type="button" class="button">All</button></li>
             <li><button type="button" class="button">Web Site</button></li>
